syntax = "proto3";


option go_package = "api/protobuf/greeting";

package api.protobuf.greeting;
// for other languages (java

service GreetingService{
    rpc SayHello(SayHelloRequest) returns(SayHelloResponse);
}


message SayHelloRequest{
    string name = 1;
}

message SayHelloResponse{
    string message = 1;
}


service RegistrationService {
    rpc Register(InformationRequest) returns(AnswerResponse);
}

message InformationRequest {
    bool request = 1;
}

message AnswerResponse {
    string answer = 1;
}

